Created reverse and jumble mutators, fixed problems relating to [Placeholder] words and added, moved and modified words

--- a/app/src/main/res/menu/menu_main.xml
+++ b/app/src/main/res/menu/menu_main.xml
@@ -129,6 +129,9 @@
             <item
                 android:id="@+id/action_exampleTemplate13"
                 android:title="@string/customTemplateExample13" />
+            <item
+                android:id="@+id/action_exampleTemplate14"
+                android:title="@string/customTemplateExample14" />
         </menu>
     </item>
 
